# MainShortcuts2.py

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
.manager/: after_upload.py  before_upload.py
changelog/: 2.0.0.json  2.0.0.md  2.0.1.json  2.0.1.md  2.0.2.json  2.0.2.md  2.0.3.json  2.0.3.md  2.0.4.json  2.0.4.md  2.0.5.json  2.0.5.md  2.0.6.json  2.0.6.md  2.0.7.json  2.0.7.md  2.0.8.json  2.0.8.md  2.0.9.json  2.0.9.md  2.1.0.json  2.1.0.md  2.1.1.json  2.1.1.md  2.1.2.json  2.1.2.md  2.1.3.json  2.1.3.md  2.2.0.json  2.2.0.md  2.2.1.json  2.2.1.md  2.2.2.json  2.2.2.md  2.2.3.json  2.2.3.md  2.2.4.json  2.2.4.md  2.3.0.json  2.3.0.md  (+82 more)
dev_utils/: build-on-github.py  build-requirements.txt  changelog_formatter.py  create_hash.py  gh_api.py  pep8_formatter.py
src/MainShortcuts2/: __init__.py  __main__.py  _any2json_regs.py  _module_info.py  _ms2app_regs.py  _ms2dat_auto.py  advanced.py  any2json.py  cfg.py  core.py  core_config.py  dict.py  dir.py  file.py  json.py  linux.py  list.py  ms2app.py  ms2dat1.py  ms2hash.py  path.py  proc.py  regex.py  special_chars.py  str.py  term.py  types.py  utils.py  win.py
src/MainShortcuts2/api/: base.py  gigachat.py  github.py  webdav.py
src/MainShortcuts2/ex/: __init__.py  aiohttp_ex.py  datetime_ex.py  pathlib_ex.py  pil_ex.py  psutil_ex.py  sqlite_ex.py  urlparse_ex.py
src/MainShortcuts2/ex/aiohttp_ex/: web.py
src/MainShortcuts2/ex/aiohttp_ex/web/: __init__.py  __main__.py
src/MainShortcuts2/gui_scripts/: __init__.py  ms2_hash_gen.py  utils.py
src/MainShortcuts2/java_ext/: __init__.py  ms2ext.py
src/MainShortcuts2/sql/: _sql_base.py  postgresql.py  sqlite.py
tests/: rel_list.py  rel_walk.py
